Fix embed fields leaking out of box

--- a/src/admin/embed/Embed.sass
+++ b/src/admin/embed/Embed.sass
@@ -56,6 +56,10 @@
 
 .Embed-field-name
   margin-bottom: 2px
+  min-width: 0
+
+.Embed-field-value
+  min-width: 0
 
 .Embed-footer
   display: flex
